<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity1">


    <item android:id="@+id/addSubtract"
        android:title="@string/add_subtract"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/random"
        android:title="@string/random"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/input"
        android:title="@string/input"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/disp"
        android:title="@string/disp"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />

</menu>