<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/addBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <TextView
                android:id="@+id/totNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="" />

            <Button
                android:id="@+id/subBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub" />


        </LinearLayout>

        <Button
            android:id="@+id/get"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:text="@string/sec" />

        <TextView
            android:id="@+id/badCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>


</LinearLayout>